Add webpack configuration

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 
 <html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JS Boilerplate</title>
-    <link rel="icon" type="image/png" href="/images/favicon.png"/>
-  </head>
-  <body>
-    <h1>JS Boilerplate</h1>
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Boilerplate JavaScript</title>
+		<link rel="icon" type="image/png" href="images/favicon.png"/>
+  	</head>
+  	<body>
+		<div id="root">
+			<h1>Boilerplate JavaScript</h1>
+		</div>
+  	</body>
 </html>
