Update index.html file, Add favicon.ico and robots.txt files

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,16 @@
 <html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="description" content="Boilerplate for creating JavaScript projects. Includes basic Webpack, Babel, Express, ESLint and Prettier configurations.">
+		<meta name="keywords" content="Boilerplate, JavaScript, HTML, CSS, SASS, Webpack, Babel, Node.js, Npm, Express, ESLint, Prettier">
+		<meta name="author" content="Łukasz Szymański">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Boilerplate JavaScript</title>
-		<link rel="icon" type="image/png" href="images/favicon.png"/>
+		<title>Boilerplate</title>
   	</head>
   	<body>
 		<div id="root">
-			<h1>Boilerplate JavaScript</h1>
+			<h1>JavaScript Boilerplate</h1>
 		</div>
   	</body>
 </html>
+     
