Update index.html file

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
   	</head>
   	<body>
 		<div id="root">
-			<h1>JavaScript Boilerplate</h1>
+			<div class="container"> 
+				<img class="container__logo" src="../src/assets/images/logo256.png" alt="JavaScript Boilerplate">
+				<h1 class="container__title">JavaScript Boilerplate</h1>
+			</div>
 		</div>
   	</body>
 </html>
