--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
 <html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="Boilerplate for creating projects in the JavaScript programming language. It includes the basic configuration of tools such as Webpack, Babel, Express, ESLint and Prettier.">
-		<meta name="keywords" content="Boilerplate, JavaScript, HTML, CSS, SASS, Webpack, Babel, Node.js, Npm, Express, ESLint, Prettier">
+		<meta name="description" content="Boilerplate for creating projects in the JavaScript programming language. It includes the basic configuration of tools such as Webpack, Babel, Jest, Express, ESLint and Prettier.">
+		<meta name="keywords" content="Boilerplate, JavaScript, HTML, CSS, SASS, Webpack, Babel, Jest, Testing Library, Node.js, Npm, Express, ESLint, Prettier">
 		<meta name="author" content="Łukasz Szymański">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Boilerplate</title>
