Add importFiles.js | Code cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
 		<meta name="keywords" content="Boilerplate, JavaScript, HTML, CSS, SASS, Webpack, Babel, Jest, Testing Library, Node.js, Npm, Express, ESLint, Prettier">
 		<meta name="author" content="Łukasz Szymański">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Boilerplate</title>
+		<title>JavaScript Boilerplate</title>
   	</head>
   	<body>
 		<div id="root">
 			<div class="container"> 
-				<img class="container__logo" src="../src/assets/images/logo256.png" alt="JavaScript Boilerplate">
+				<img class="container__logo" src="../src/assets/images/logo/logo256-basic.png" alt="JavaScript Boilerplate" />
 				<h1 class="container__title">JavaScript Boilerplate</h1>
 			</div>
 		</div>
