Update index.html file

--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,7 @@
 		<title>JavaScript Boilerplate</title>
   	</head>
   	<body>
-		<div id="root">
-			<div class="container"> 
-				<img class="container__logo" src="../src/assets/images/logo/logo256-basic.png" alt="JavaScript Boilerplate" />
-				<h1 class="container__title">JavaScript Boilerplate</h1>
-			</div>
-		</div>
+		<div id="root"></div>
   	</body>
 </html>
      
