Format all files by Prettier

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 
 <html lang="en-US">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="description" content="Boilerplate for creating projects in the JavaScript programming language. It includes the basic configuration of tools such as Webpack, Babel, Jest, Express, ESLint and Prettier.">
-		<meta name="keywords" content="Boilerplate, JavaScript, HTML, CSS, SASS, Webpack, Babel, Jest, Node.js, Npm, Express, ESLint, Prettier">
-		<meta name="author" content="Łukasz Szymański">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>JavaScript Boilerplate</title>
-  	</head>
-  	<body>
-		<div id="root"></div>
-  	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="description" content="Boilerplate for creating projects in the JavaScript programming language. It includes the basic configuration of tools such as Webpack, Babel, Jest, Express, ESLint and Prettier." />
+        <meta name="keywords" content="Boilerplate, JavaScript, HTML, CSS, SASS, Webpack, Babel, Jest, Node.js, Npm, Express, ESLint, Prettier" />
+        <meta name="author" content="Łukasz Szymański" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>JavaScript Boilerplate</title>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
-     
