Update project structure

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
         <title>JavaScript Boilerplate</title>
     </head>
     <body>
-        <div id="home-root"></div>
+        <div id="root"></div>
     </body>
 </html>
