--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,5 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>JavaScript Boilerplate</title>
     </head>
-    <body>
-        <div id="root"></div>
-    </body>
+    <body></body>
 </html>
