--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>JavaScript Boilerplate</title>
     </head>
-    <body></body>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
